--- a/client-app/.gitignore
+++ b/client-app/.gitignore
@@ -12,6 +12,18 @@ dist
 dist-ssr
 *.local
 
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
