User login, register implementation on the backend

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,19 @@
 {
+  "Jwt": {
+    "Issuer": "https://snake_game.com/",
+    "Audience": "https://snake_game.com/",
+    "Authority": "https://localhost:3000",
+    "Key": "This is development test key"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=snakedb;Username=psqlUsername;Password=psqlPassword;Include Error Detail=true"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
