--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      "exceptionless_Microsoft": "Critical",
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
