--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Jwt": {
-    "Issuer": "https://snake_game.com/",
-    "Audience": "https://snake_game.com/",
-    "Authority": "https://localhost:3000",
+    "Issuer": "https://localhost:8000",
+    "Audience": "https://localhost:3000",
+    "Authority": "https://localhost:8000",
     "Key": "This is development test key"
   },
   "ConnectionStrings": {
