More detailed readme & modified connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     "Key": "This is development test key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=snakedb;Username=psqlUsername;Password=psqlPassword;Include Error Detail=true"
+    "DefaultConnection": "Host=localhost;Database=snakedb;Username=root;Password=root;Include Error Detail=true"
   },
   "Logging": {
     "LogLevel": {
