--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "Jwt": {
+    "Issuer": "https://localhost:8000",
+    "Audience": "https://localhost:3000",
+    "Authority": "https://localhost:8000",
+    "Key": "This is development test key"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=snakedb;Username=root;Password=root;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
