Add jwt token generation

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,18 +1,17 @@
 {
-  "Jwt": {
-    "Issuer": "https://localhost:8000",
-    "Audience": "https://localhost:3000",
-    "Authority": "https://localhost:8000",
-    "Key": "This is development test key"
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=snakedb;Username=root;Password=root;Include Error Detail=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=snakegamedb;Username=root;Password=root;Include Error Detail=true"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "ValidIssuer": "Aurimas",
+    "ValidAudience": "TrustedClient",
+    "Key": "524azw7wtjtyyztvw89k4928wqyao7ha"
+  }
 }
