--- a/SnakeGame.Client/package.json
+++ b/SnakeGame.Client/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@material-tailwind/react": "^2.1.6",
     "@microsoft/signalr": "^8.0.0",
+    "@mui/material": "^5.14.20",
+    "@mui/x-date-pickers": "^6.18.4",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
